@@ -1,5 +1,10 @@
 2012-07-01  David Gilbert <david.gilbert@object-refinery.com>
 
+    * org/jfree/chart/plot/PiePlot.java
+    (drawSimpleLabels): Generate label once only (DG);
+
+2012-07-01  David Gilbert <david.gilbert@object-refinery.com>
+
     Bug 3521736 (optimisation)
     * org/jfree/chart/renderer/xy/DeviationRenderer.java
     (drawItem): Provide initial capacity for GeneralPath.
